# checkstream

./: .env.example  .gitignore  ARCHITECTURE.md  CANDLE_MODELS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DELIVERY_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PIPELINE_IMPLEMENTATION.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  ROADMAP.md  SUMMARY.txt  classifiers.yaml  config.yaml  demo.sh  docker-compose.yml  install.sh  prometheus.yml
.github/workflows/: benchmarks.yml  ci.yml
crates/checkstream-classifiers/: Cargo.toml  README.md
crates/checkstream-classifiers/benches/: latency_benchmarks.rs
crates/checkstream-classifiers/src/: classifier.rs  config.rs  dynamic_registry.rs  financial_advice.rs  generic_loader.rs  lib.rs  loader_plugin.rs  model_config.rs  model_loader.rs  patterns.rs  pii.rs  pipeline.rs  prompt_injection.rs  registry.rs  sentiment.rs  streaming.rs  toxicity.rs
crates/checkstream-classifiers/tests/: ml_classifier_tests.rs  mock_classifiers.rs
crates/checkstream-core/: Cargo.toml  README.md
crates/checkstream-core/src/: error.rs  lib.rs  stream.rs  stream_adapter.rs  types.rs
crates/checkstream-core/src/adapters/: configurable.rs  mod.rs  openai.rs
crates/checkstream-demo/: Cargo.toml  build.rs
crates/checkstream-demo/src/: cli.rs  lib.rs  main.rs
crates/checkstream-demo/src/mock/: issue_injector.rs  llm_backend.rs  mod.rs
crates/checkstream-demo/src/server/: app.rs  mod.rs  routes.rs  static_files.rs  websocket.rs
crates/checkstream-demo/src/state/: app_state.rs  event_bus.rs  metrics_collector.rs  mod.rs
crates/checkstream-demo/src/traffic/: controller.rs  generator.rs  mod.rs  templates.rs
crates/checkstream-demo/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/checkstream-demo/web/src/: App.vue  style.css
crates/checkstream-demo/web/src/components/: EventLog.vue  IssueBreakdown.vue  LiveStats.vue  RequestInspector.vue  TrafficControls.vue
crates/checkstream-demo/web/src/stores/: events.ts  traffic.ts
crates/checkstream-policy/: Cargo.toml  README.md
crates/checkstream-policy/src/: action.rs  engine.rs  executor.rs  lib.rs  rule.rs  trigger.rs
crates/checkstream-proxy/: Cargo.toml  README.md
crates/checkstream-proxy/src/: config.rs  main.rs  proxy.rs  routes.rs  security.rs  tenant.rs
crates/checkstream-proxy/tests/: integration_test.rs
crates/checkstream-telemetry/: Cargo.toml  README.md
crates/checkstream-telemetry/src/: audit.rs  lib.rs  metrics.rs  persistence.rs  service.rs
docs/: ADDING_MODELS_GUIDE.md  AGENT_INTEGRATION.md  ARCHITECTURE_DIAGRAM.md  DESIGN_PRINCIPLES.md  DOCUMENTATION_INDEX.md  DYNAMIC_MODEL_LOADING.md  FCA_EXAMPLE.md  INTEGRATION_GUIDE.md  MODEL_LOADING_GUIDE.md  MODEL_LOADING_SUMMARY.md  QUICKSTART_PIPELINES.md  README.md  STREAMING_CONTEXT.md  THREE_PHASE_DIAGRAM.md  VISION_COMPLETE.md  adversarial-robustness.md  api-reference.md  architecture.md  business-positioning.md  classifier-configuration.md  control-plane.md  deployment-modes.md  getting-started.md  model-loading.md  overview.md  pipeline-configuration.md  policy-engine.md  pre-production-validation.md  regulatory-compliance.md  security-privacy.md  use-cases.md
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/architecture/: classifiers.md  overview.md  pipeline.md
documentation/docs/configuration/: classifiers.md  pipelines.md  proxy.md
documentation/docs/deployment/: docker.md  kubernetes.md
documentation/docs/examples/: content-moderation.md  financial-compliance.md  healthcare.md
documentation/docs/getting-started/: first-policy.md  installation.md  quickstart.md
documentation/docs/guides/: compliance.md  model-loading.md  multi-tenant.md  policy-engine.md
documentation/docs/reference/: api.md  metrics.md  policy-language.md
examples/: classifier_loading.rs  dynamic_model_loading.rs  full_dynamic_pipeline.rs  model_registry_usage.rs  pipeline_usage.rs  streaming_context.rs  streaming_demo.py  test_hf_model.rs  test_ml_model.rs
paper/: Makefile  checkstream.aux  checkstream.bbl  checkstream.bib  checkstream.blg  checkstream.out  checkstream.tex
plugins/checkstream-classifiers-ml-plugin/: Cargo.toml  README.md  plugins.md
plugins/checkstream-classifiers-ml-plugin/examples/: external_ml_loader.rs
plugins/checkstream-classifiers-ml-plugin/src/: external_ml_loader.rs  lib.rs
plugins/checkstream-classifiers-ml-plugin/tests/: default_model_tests.rs
policies/: default.yaml  fca-consumer-duty.yaml
scripts/: build_tokenizer.py  download_models.sh
