[workspace]
resolver = "2"
members = [
    "crates/checkstream-proxy",
    "crates/checkstream-policy",
    "crates/checkstream-classifiers",
    "crates/checkstream-core",
    "crates/checkstream-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
repository = "https://github.com/yourusername/checkstream"
homepage = "https://checkstream.ai"
authors = ["CheckStream Contributors"]

[workspace.dependencies]
# Async runtime and networking
tokio = { version = "1.38", features = ["full"] }
async-trait = "0.1"
hyper = { version = "1.4", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
axum = { version = "0.7", features = ["http2", "ws"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# High-performance utilities
bytes = "1.6"
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"
futures-util = "0.3"
pin-project = "1.1"

# Performance monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# HTTP clients for LLM APIs
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }

# Regex and pattern matching (optimized)
regex = "1.10"
aho-corasick = "1.1"

# Security and crypto
sha2 = "0.10"
hmac = "0.12"
argon2 = "0.5"
rustls = "0.23"
rustls-pemfile = "2.1"

# ML/Inference (for classifiers)
# Using Candle for Rust-native ML inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.3"  # For downloading models from Hugging Face

# Redis for distributed state
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# System utilities
num_cpus = "1.16"
uuid = { version = "1.10", features = ["v4"] }

# Testing
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"

[profile.dev]
opt-level = 1

# Fast compile profile for development
[profile.dev.package."*"]
opt-level = 3
