[package]
name = "checkstream-classifiers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Workspace crates
checkstream-core = { path = "../checkstream-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# ML inference with Candle
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tokenizers = { workspace = true }
hf-hub = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Pattern matching for simple classifiers
regex = { workspace = true }
aho-corasick = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# System utilities
num_cpus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-subscriber = { workspace = true }

[[example]]
name = "classifier_loading"
path = "../../examples/classifier_loading.rs"

[[example]]
name = "pipeline_usage"
path = "../../examples/pipeline_usage.rs"
