[package]
name = "checkstream-classifiers"
description = "ML and pattern-based classifiers for toxicity, PII, and prompt injection detection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[features]
default = []
ml-models = []

[dependencies]
# Workspace crates
checkstream-core = { version = "0.1.0", path = "../checkstream-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Pattern matching for simple classifiers
regex = { workspace = true }
aho-corasick = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# System utilities
num_cpus = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tracing-subscriber = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "latency_benchmarks"
harness = false

[[example]]
name = "classifier_loading"
path = "../../examples/classifier_loading.rs"

[[example]]
name = "pipeline_usage"
path = "../../examples/pipeline_usage.rs"

[[example]]
name = "streaming_context"
path = "../../examples/streaming_context.rs"

[[example]]
name = "test_ml_model"
path = "../../examples/test_ml_model.rs"

[[example]]
name = "model_registry_usage"
path = "../../examples/model_registry_usage.rs"

[[example]]
name = "dynamic_model_loading"
path = "../../examples/dynamic_model_loading.rs"

[[example]]
name = "full_dynamic_pipeline"
path = "../../examples/full_dynamic_pipeline.rs"

[[example]]
name = "test_hf_model"
path = "../../examples/test_hf_model.rs"
