[package]
name = "checkstream-core"
description = "Core types, token buffer, and error handling for CheckStream guardrail platform"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
# Async runtime
tokio = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
pin-project = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
metrics = { workspace = true }

# Utilities
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
