[package]
name = "checkstream-telemetry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Workspace crates
checkstream-core = { path = "../checkstream-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
metrics = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Hashing for audit trail
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
