[package]
name = "checkstream-telemetry"
description = "Hash-chained audit trail and Prometheus metrics for CheckStream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[dependencies]
# Workspace crates
checkstream-core = { version = "0.1.0", path = "../checkstream-core" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging and metrics
tracing = { workspace = true }
metrics = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Hashing for audit trail
sha2 = { workspace = true }

# Secure ID generation
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
tempfile = { workspace = true }
