[package]
name = "checkstream-classifiers-ml-plugin"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "External ML inference plugin for checkstream-classifiers dynamic registry"
repository = "https://github.com/Skelf-Research/checkstream"

[dependencies]
checkstream-core = { path = "../../crates/checkstream-core" }
checkstream-classifiers = { path = "../../crates/checkstream-classifiers", default-features = false }

async-trait = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
dirs = "5.0"

candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.20"
hf-hub = "0.3"

[dev-dependencies]
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
serde_yaml = "0.9"
tracing-subscriber = "0.3"

[[example]]
name = "external_ml_loader"
path = "examples/external_ml_loader.rs"
